--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -133,7 +133,7 @@ nav {
     }
 
     .nk-navbar {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 0.4fr 1fr;
         align-items: center;
     }
 
